--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,114 @@
-/* Agrega aquí tus estilos*/
+#content {
+   width: 600px;
+   margin-left: auto;
+   margin-right: auto;
+}
+body{
+	background-image: url(jhon-french-400.jpg);
+	background-repeat: repeat;
+}
+*{
+	font-family: 'Julius Sans One', sans-serif;;
+}
+h1, h2, h3, h4, h5, h6{
+	font-family: 'Julius Sans One', sans-serif;
+	font-weight: 700;
+}
+p{
+	font-family: 'Libre Baskerville', sans-serif;
+}
+img{
+	position: relative;
+    width: 100%;
+    align-content: center;
+}
+
+h1{
+	position: absolute;
+    top: 200px;
+    left: 0;
+    width: 100%;
+    margin-left: 350px;
+    margin-bottom: 40px;
+	margin-top: 130px;
+    color: antiquewhite;
+}
+
+h1 span { 
+   color: white; 
+   font: bold 36px/45px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 20px; 
+   padding-left: 80px;
+   padding-right: 80px;
+
+}
+
+h2{
+	position: absolute;
+    top: 200px;
+    left: 0;
+    width: 100%;
+    margin-left: 377px;
+    margin-bottom: 40px;
+	margin-top: 240px;
+    color: antiquewhite;
+}
+
+h2 span { 
+   color: white; 
+   font: bold 24px/45px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+   padding-left: 50px;
+   padding-right: 50px;
+
+}
+
+.summary{
+	background-color: rgba(205,221,135,1);
+	padding: 10px;
+}
+
+.preamble{
+	background-color: rgba(205,221,135,1);
+	padding: 10px;
+}
+.mainsupporting{
+	background-color: rgba(205,221,135,0.2);
+	padding: 10px;
+} 
+.participation{
+	background-color: rgba(205,221,135,1);
+	padding: 10px;
+}
+.benefits{
+	background-color: rgba(205,221,135,0.2);
+	padding: 10px;
+}
+.requirements{
+	background-color: rgba(205,221,135,1);
+	padding: 10px;
+}
+.sidebar{
+	background-color: rgba(205,221,135,1);
+	padding: 10px;
+}
+.requirements p:last-child {
+    width: auto;
+    padding: 1em 12%;
+    margin: 0;
+    color: #FFFFFF;
+    background-attachment: fixed, fixed, fixed, scroll;
+    background-image: url(jhon-french-400.jpg);
+    background-position: 0 0, -5px -25px, 0 0, 0 50%;
+    background-repeat: repeat, repeat, repeat, no-repeat;
+    background-size: auto, auto, auto, cover;
+    font-size: 25px;
+    font-style: italic;
+    text-align: center;
+}
